<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>data-oriented-programming</artifactId>
   <version>1.0.0</version>
   <name>data-oriented-programming</name>
   <description>Project for Data Oriented Programming in Java</description>

   <parent>
      <artifactId>design-pattern-modules</artifactId>
      <groupId>cn.tuyucheng.taketoday</groupId>
      <version>1.0.0</version>
   </parent>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <source>25</source>
               <target>25</target>
               <!-- Needed due to a bug with JDK 21, described here: https://issues.apache.org/jira/browse/MCOMPILER-546?page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel&focusedCommentId=17767513 -->
               <debug>false</debug>
               <compilerArgs>
                  <arg>--enable-preview</arg>
               </compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <argLine>--enable-preview</argLine>
            </configuration>
         </plugin>

      </plugins>
   </build>

   <properties>
      <maven.compiler.source.version>25</maven.compiler.source.version>
      <maven.compiler.target.version>25</maven.compiler.target.version>
   </properties>
</project>